--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,15 +24,17 @@
 
     <Button
         android:id="@+id/button2"
-        android:text="Dodaj produkt"
+        android:layout_width="wrap_content"
 
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="56dp"
+        android:background="@drawable/rounded_edge"
+        android:text="Dodaj produkt"
         android:textColor="#181818"
         android:textSize="15dp"
-        android:background="@drawable/rounded_edge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="56dp"
+        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
@@ -52,15 +54,15 @@
 
     <Button
         android:id="@+id/button3"
-        android:text="Usuń produkt"
+        android:layout_width="wrap_content"
 
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/rounded_edge"
+        android:text="Usuń produkt"
         android:textColor="#181818"
         android:textSize="15dp"
-        android:background="@drawable/rounded_edge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
-        android:layout_marginTop="56dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
