--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="Twoja lodówka online"
+        android:text="Your Online Fridge"
         android:textAllCaps="true"
         android:textSize="27dp"
         android:textStyle="bold"
@@ -30,7 +30,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="56dp"
         android:background="@drawable/rounded_edge"
-        android:text="Dodaj produkt"
+        android:text="Add product"
         android:textColor="#181818"
         android:textSize="15dp"
         app:layout_constraintEnd_toStartOf="@+id/button3"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="340dp"
         android:background="@drawable/rounded_edge"
-        android:text="Sprawdz produkty"
+        android:text="Check your fridge"
         android:textColor="#181818"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="40dp"
         android:background="@drawable/rounded_edge"
-        android:text="Usuń produkt"
+        android:text="Delete product"
         android:textColor="#181818"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
