--- a/app/src/main/res/layout/add_book.xml
+++ b/app/src/main/res/layout/add_book.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="Podaj dane produktu"
+        android:text="Add your product"
         android:textAllCaps="true"
         android:textSize="27dp"
         android:textStyle="bold"
@@ -39,7 +39,7 @@
                 android:background="@drawable/rounded_edge"
                 android:focusable="false"
                 android:focusedByDefault="false"
-                android:hint="Kod kreskdddddddddddddddowy"
+                android:hint="Barcode: kreskdddddddddddddddowy"
                 android:inputType="textPersonName"
                 android:paddingHorizontal="50dp"
                 android:paddingVertical="5dp"
@@ -62,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
                 android:inputType="textPersonName"
-                android:hint="Nazwa produktu"
+                android:hint="Name"
                 android:textColor="@color/Gray"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
                 android:inputType="number"
                 android:paddingHorizontal="50dp"
                 android:paddingVertical="5dp"
-                android:hint="Ilość sztuk"
+                android:hint="Amount"
                 android:textColor="@color/Gray"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_edge"
                 android:layout_marginTop="36dp"
-                android:text="Dodaj produkt"
+                android:text="add"
                 android:textSize="15dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
