--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -24,32 +24,35 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_marginTop="230dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="250dp"
+        android:layout_marginTop="152dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.018"
+        tools:layout_editor_absoluteX="0dp">
 
         <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@color/DarkGray"
             android:stretchColumns="*"
-            tools:context=".CheckActivity"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp">
+            tools:context=".CheckActivity">
 
 
-            <TableRow
-                android:background="@drawable/table"
+            <TableRow android:background="@drawable/table"
 
                 >
 
                 <EditText
                     android:id="@+id/id"
                     android:background="@drawable/table"
-                    android:padding="3dip"
                     android:focusable="false"
+                    android:padding="3dip"
                     android:textAlignment="center" />
 
                 <EditText
@@ -62,13 +65,35 @@
                 <EditText
                     android:id="@+id/amount"
                     android:background="@drawable/table"
-                    android:padding="3dip"
                     android:focusable="false"
+                    android:padding="3dip"
                     android:textAlignment="center" />
             </TableRow>
         </TableLayout>
     </ScrollView>
 
+    <Button
+        android:id="@+id/buttonDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:text="Delete product"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idToDelete" />
+
+    <EditText
+        android:id="@+id/idToDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="Barcode to delete"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
